syntax = "proto3";
package userservice;
option java_multiple_files=true;
option java_package="com.acheron.userserver";
option java_outer_classname="UserServiceProto";
import "google/protobuf/empty.proto";




service UserServiceGrpc{

  rpc saveUser(UserRequest) returns (google.protobuf.Empty);
}

message UserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string display_name = 4;
  string image = 5;
  bool is_email_verified = 6;
  string role = 7;
  string auth_method = 8;
}